--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,24 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    
+
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v1
-      
-    
+
+    - uses: azure/setup-kubectl@v1
+      id: install
+
+    - name: Install Civo CLI
+      run: |
+        curl -sL https://civo.com/get | sh
+        civo version
+        civo apikey add github_actions_key ${{ secrets.CIVO_API_KEY }}
+        civo apikey current github_actions_key
+
     - name: Setup configuration
       run: |
         echo ${{ secrets.ENV_FILE_BASE64 }} | base64 -d > ./app.env
-    
+
     - name: Cache Docker layers
       uses: actions/cache@v2
       with:
