--- a/devops/deployment.yaml
+++ b/devops/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: fiber-pscale
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
       app: fiber-pscale
@@ -13,16 +13,14 @@ spec:
         app: fiber-pscale
     spec:
       containers:
-        - image: makefeelbetter/fiber-pscale:latest
-          name: fiber-pscale
+        - name: fiber-pscale
+          image: makefeelbetter/fiber-pscale:latest
           ports:
-          - containerPort: 3000
-            protocol: TCP
+            - containerPort: 3000
           volumeMounts:
           - name: fiber-pscale-env
             mountPath: "/app/app.env"
             subPath: "app.env"
-      priorityClassName: default
       volumes:
       - name: fiber-pscale-env
         configMap:
